--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/style.css">
-	<script defer src="./js/app.js"></script>
+	<script defer src="js/app.js"></script>
+	<link rel="stylesheet" href="./css/style.css">
 	<title>Tic Tac Toe</title>
 </head>
 <body>
 	<h1>Tic-Tac-Toe</h1>
-	<h2 id="message">Message</h2>
-
+	<h2 id="message">3 in a row wins!</h2>
+	<button id="button" type="reset">Play Again?</button>
 	<section class="board">
 		<div id="sq0"></div>
 		<div id="sq1"></div>
@@ -25,3 +26,4 @@
 	</section>    
 </body>
 </html>
+
