--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/style.css">
+	<script defer src="./js/app.js"></script>
 	<script defer src="js/app.js"></script>
 	<link rel="stylesheet" href="./css/style.css">
 	<title>Tic Tac Toe</title>
 </head>
 <body>
-	<h1>Tic-Tac-Toe</h1>
-	<h2 id="message">3 in a row wins!</h2>
+	<h1><strong>Tic-Tac-Toe</strong></h1>
+	<h2 id="message">Three in a row wins! Cick a box to begin...</h2>
+
+	<h2 id="message">Player 1 = X's | Player to 2 = O's</h2>
 	<button id="button" type="reset">Play Again?</button>
 	<section class="board">
 		<div id="sq0"></div>
@@ -25,5 +28,5 @@
 		<div id="sq8"></div>
 	</section>    
 </body>
+</html> 
 </html>
-
