--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./css/style.css">
-	<script defer src="./js/app.js"></script>
 	<script defer src="js/app.js"></script>
-	<link rel="stylesheet" href="./css/style.css">
+
 	<title>Tic Tac Toe</title>
 </head>
 <body>
+	<h3 id = "prevTurns">Prior squares:</h3>
 	<h1><strong>Tic-Tac-Toe</strong></h1>
 	<h2 id="message">Three in a row wins! Cick a box to begin...</h2>
 
@@ -26,7 +26,7 @@
 		<div id="sq6"></div>
 		<div id="sq7"></div>
 		<div id="sq8"></div>
-	</section>    
+	</section>  
 </body>
 </html> 
 </html>
